[project]
name = "effort_estimation_tool1"
version = "0.1.0"
description = "effort_estimation_tool1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
effort_estimation_tool1 = "effort_estimation_tool1.main:run"
run_crew = "effort_estimation_tool1.main:run"
train = "effort_estimation_tool1.main:train"
replay = "effort_estimation_tool1.main:replay"
test = "effort_estimation_tool1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
